fix(ix-choice): scrollbar at bottom and correct background color

--- a/client/src/lit/interactive-example/index.scss
+++ b/client/src/lit/interactive-example/index.scss
@@ -281,7 +281,6 @@ ix-tab-wrapper {
       }
 
       play-editor {
-        background: var(--background-secondary);
         border: 1px solid var(--border-secondary);
         border-radius: var(--elem-radius);
         cursor: pointer;
